feat: edit paper endpoint
